fixed the problem with wrapping on large screens

--- a/src/styles/cards/cards_blocks/stars.scss
+++ b/src/styles/cards/cards_blocks/stars.scss
@@ -1,4 +1,4 @@
-.stars--4 {
+.stars {
   display: flex;
   height: 16px;
   width: 96px;
@@ -11,8 +11,14 @@
   background-repeat: no-repeat;
   background-position: center;
   margin-right: 4px;
+
+  &:last-of-type {
+    margin-right: 0;
+  }
 }
 
-.stars--4 > .stars__star:nth-child(-n + 4) {
-  background-image: url(../images/star-active.svg);
+@for $starCount from 1 through 5 {
+  .stars--#{$starCount} .stars__star:nth-child(-n + #{$starCount}) {
+    background-image: url(../images/star-active.svg);
+  }
 }
