--- a/src/styles/main/main-block.scss
+++ b/src/styles/main/main-block.scss
@@ -1,15 +1,20 @@
 .main {
   padding: 50px 0 73px;
-  max-width: 944px;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+
+  &__wrapper {
+    max-width: 944px;
+    width: 100%;
+  }
 
   &__row {
+    width: 100%;
     display: flex;
     flex-grow: 1;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 46px;
-    margin: 0 auto;
 
     &:last-child {
       padding-bottom: 0;
