--- a/src/styles/main/reset.scss
+++ b/src/styles/main/reset.scss
@@ -7,6 +7,9 @@ html {
   color: #{$main-color};
 }
 
-body, p, a {
+body,
+p,
+a,
+img {
   margin: 0;
 }
